crates/kdl-config-derive/tests/ui/invalid_skip_serialize_none.stderr
error: expected boolean literal
 --> tests/ui/invalid_skip_serialize_none.rs:4:29
  |
4 | #[kdl(skip_serialize_none = "yes")]
  |                             ^^^^^
