crates/kdl-config-derive/tests/ui/invalid_skip_serialize_none.rs
use kdl_config_derive::KdlNode;

#[derive(KdlNode)]
#[kdl(skip_serialize_none = "yes")]
struct Test {
    value: Option<i64>,
}

fn main() {}
